--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-cards",
   "version": "0.1.0",
-  "homepage": "/cards",
+  "homepage": "https://alecarpy24.github.io/cards/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
